crates/macro-tools/tests/ui/accessors/fail/tuple_struct.rs
use picea_macro_tools::Accessors;

#[derive(Accessors)]
struct Meta(#[accessor(get)] String);

fn main() {}
